# rf-sentinel

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
core/: __init__.py  cli.py  plotting.py
core/api/: __init__.py  db.py  live.py  models.py  routes.py  runner.py  server.py  ws.py
core/dsp/: __init__.py  classify.py  demod.py  peaks.py  record.py  tracker.py  types.py
core/ml/: dataset.py  features.py  inference.py  model.py  train.py
core/sdr/: __init__.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ControlPanel.tsx  DualRangeSlider.tsx  JobList.tsx  LiveSpectrum.tsx  LogConsole.tsx  ModeSelector.tsx  ParamSlider.tsx  PresetBar.tsx  ResultView.tsx  SpectrumChart.tsx  WaterfallCanvas.tsx  colormap.ts  theme.ts
frontend/src/components/plugins/: bgPlugin.ts  vfoPlugin.ts  wheelZoomPlugin.ts
frontend/src/hooks/: useAudioPlayer.ts  useWebSocket.ts
scripts/: analyze_recording.py  compare_data.py  compare_snippets.py  convert_radioml.py  convert_subghz.py  generate_torchsig.py
