[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rfsentinel"
version = "0.1.0"
description = "RF spectrum monitoring platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pyrtlsdr>=0.3.0",
    "numpy>=1.23",
    "scipy>=1.9",
]

[project.optional-dependencies]
ui = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.setuptools.packages.find]
include = ["core*"]
